# MPCFlow

./: .gitignore  README.md
2DHexagon/: README.md  dataset.py  eval.py  mlp_hexagon.pt  model.py  mpc_receding_horizon.py  optimal_control.py  train_flow.py  uncond_sample.py
FLUX2/: README.md  cli_mpc_flow.py  colorize_luminance_demo.ipynb  environment.yml  pyproject.toml  sweep_mpc.py
FLUX2/clip/: base_clip.py
FLUX2/docs/: flux2_dev_hf.md
FLUX2/flux2/: __init__.py  mpc.py  sampling.py
FLUX2/style_images/: licenses.txt
FLUX2/sweeps/: README.md  sweep_mpc_flowchef.json  sweep_style_tradeoff_analysis.ipynb
