[project]
name = "mpcflow"
version = "0.1.0"
description = "Research code for MPC-Flow and FLUX.2 inference-time control experiments."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "George Webber" },
  { name = "Alexander Denker" },
  { name = "Riccardo Barbano" },
  { name = "Andrew J. Reader" },
]
license = { file = "../LICENSE.md" }
dependencies = [
  "accelerate>=1.13",
  "bitsandbytes>=0.49",
  "diffusers>=0.37",
  "einops>=0.8",
  "fire>=0.7",
  "ftfy>=6.3",
  "huggingface_hub>=1.7",
  "invisible-watermark>=0.2",
  "lpips>=0.1.4",
  "numpy>=2.0",
  "openai>=2.8",
  "pillow>=11.0",
  "regex>=2026.2.28",
  "safetensors>=0.7",
  "scikit-image>=0.26",
  "torch>=2.10",
  "torchvision>=0.25",
  "tqdm>=4.67",
  "transformers>=5.3",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.31",
  "ipywidgets>=8.0",
  "jupyterlab>=4.0",
  "matplotlib>=3.10",
  "pandas>=2.0",
  "ruff==0.6.8",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flux2*", "clip*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
